--- a/data/more_create_recipes/recipes/crafting/supp_trapped_present.json
+++ b/data/more_create_recipes/recipes/crafting/supp_trapped_present.json
@@ -1,5 +1,11 @@
 {
   "type": "minecraft:crafting_shaped",
+  "conditions": [
+    {
+      "type": "forge:mod_loaded",
+      "modid": "supplementaries"
+    }
+  ],
   "pattern": [
     "PPP",
     "PTP",
